--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,15 +2,11 @@ version: 2
 jobs:
   build:
     docker:
-      - image: debian:stretch
+      - image: google/cloud-sdk:latest
 
     steps:
       - checkout
 
       - run:
-          name: Greeting
-          command: echo Hello, world.
-
-      - run:
-          name: Print the Current Time
-          command: date
+          name: Build
+          command: ./gradlew war
