--- a/build.gradle
+++ b/build.gradle
@@ -12,14 +12,16 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "com.google.cloud.tools:appengine-gradle-plugin:$appengine_plugin_version"
     }
+
+}
+
+plugins {
+    id "org.gretty" version "2.3.1"
 }
 
 apply plugin: 'kotlin'
 apply plugin: 'war'
 apply plugin: 'com.google.cloud.tools.appengine'
-
-apply from: 'https://raw.github.com/gretty-gradle-plugin/gretty/master/pluginScripts/gretty.plugin'
-
 
 repositories {
     jcenter()
