--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:2.6.2"
     implementation 'com.auth0:java-jwt:3.8.3'
     implementation 'com.auth0:jwks-rsa:0.9.0'
+    implementation 'org.koin:koin-ktor:2.0.1'
 
     providedCompile "com.google.appengine:appengine:$appengine_version"
     testCompile 'junit:junit:4.12'
