--- a/build.gradle
+++ b/build.gradle
@@ -38,10 +38,10 @@ dependencies {
     implementation 'com.auth0:java-jwt:3.8.3'
     implementation 'com.auth0:jwks-rsa:0.9.0'
     implementation 'org.koin:koin-ktor:2.0.1'
-
     providedCompile "com.google.appengine:appengine:$appengine_version"
     testCompile 'junit:junit:4.12'
-
+    testImplementation "io.mockk:mockk:1.9.3"
+    testImplementation 'io.kotlintest:kotlintest-runner-junit5:3.3.2'
 }
 
 gretty {
